--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -19,6 +19,9 @@
   <listener>
     <listener-class>org.springframework.web.util.Log4jConfigListener</listener-class>
   </listener>
+  <listener>
+    <listener-class>com.blitz.blog.utils.listener.ContentPahtListener</listener-class>
+  </listener>
 
   <!-- 字符集 过滤器  -->
   <filter>
