--- a/src/main/resources/properties/dataSource.properties
+++ b/src/main/resources/properties/dataSource.properties
@@ -1,6 +1,6 @@
-jdbc.username = root
-jdbc.password = root
-jdbc.url = jdbc\:mysql\://192.168.100.227\:3306/faded?useUnicode\=true&characterEncoding\=UTF-8
+jdbc.username = tt
+jdbc.password = tt
+jdbc.url = jdbc\:mysql\://127.0.0.1\:3306/mydb?useUnicode\=true&characterEncoding\=UTF-8
 jdbc.driver =com.mysql.jdbc.Driver
 jdbc.initialSize=5
 jdbc.minIdle=1
